# sbockl

./: Cargo.toml
src/: d  main.rs  triangle.frag  triangle.vert
src/shaders/: default.frag
