[package]
name = "sbockl"
version = "0.1.0"
authors = ["actuday6418 <actuday6418@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gfx = "*"
# gfx_core="*"
gfx_device_gl="*"
gfx_window_glutin = "*"
glutin = "*"
old_school_gfx_glutin_ext="*"
